# sea-you-again

./: .gitignore  README.md  alembic.ini  package-lock.json  pyproject.toml
app/: README.md
app/api/: deps.py  main.py  settings.py
app/api/routers/: admin.py  alerts.py  forecast.py  playbook.py  subscriptions.py
app/api/schemas/: admin.py  alert.py  forecast.py  subscription.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/inference/: load_model.py  postprocess.py  render.py  serve.py
app/playbook/: playbook.yaml
app/tests/: test_alert_engine.py  test_subscriptions_api.py
app/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
app/web/__tests__/: HorizonSlider.test.tsx  PlaybookCard.test.tsx  RunStatusPill.test.tsx
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/app/about/: page.tsx
app/web/app/admin/: layout.tsx  page.tsx
app/web/app/admin/(authed)/: layout.tsx  page.tsx
app/web/app/admin/(authed)/runs/[id]/: page.tsx
app/web/app/admin/login/: page.tsx
app/web/app/admin/runs/[id]/: page.tsx
app/web/app/admin/subscriptions/: page.tsx
app/web/app/map/: page.tsx
app/web/app/playbook/: page.tsx
app/web/app/subscribe/: page.tsx
app/web/app/subscribe/confirm/: page.tsx
app/web/components/: HorizonSlider.tsx  LayerSwitcher.tsx  MapView.tsx  PlaybookCard.tsx  QueryProvider.tsx  RunControls.tsx  RunStatusPill.tsx
app/web/lib/: api.ts  queries.ts
app/web/public/: basemap-attribution.txt
app/worker/: alert_engine.py  checkpoint_backup.py  daily_run.py  ingest.py  scheduler.py  trigger_listener.py
app/worker/notify/: email.py  inapp.py  sms.py
data-preprocessing-pipeline/: .gitignore  README.md  aligner.py  config.py  dataset.py  loader.py  loss.py  masker.py  normalizer.py  patcher.py  pipeline.py  requirements.txt
infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml  env.example  nginx.conf
model/: augment.py  calibrate.py  check_threshold.py  fusion.py  loss.py  masknet.py  model.py  moe_decoder.py  temporal.py
model/encoders/: bgc_encoder.py  discharge_encoder.py  optical_encoder.py  physics_encoder.py
scripts/: Train.py  architecture_diagram.py  eval.py  visualize_layers.py
